# session-storage-hub

./: .cz-config.cjs  .eslintrc  .eslintrc.cjs  .eslintrc.json  .eslintrcrc  .gitignore  .prettierrc  .releaserc  CHANGELOG.md  CONTRIBUTE.md  Makefile  README.md  USAGE.md  babel.config.json  commitlint.config.cjs  craco.config.js  docker-compose.yml  index.html  jest.config.js  local.mk  manifest.json  output.csv  package-lock.json  package.json  pyproject.toml  setup.cfg  tailwind.config.js  tsconfig.json  vite.config.ts  wxt.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  main.yml  release.yml  tests.yml
.husky/: commit-msg
.wxt/: tsconfig.json  wxt.d.ts
.wxt/types/: imports.d.ts  paths.d.ts
logs/: patch-2-23.md  patch-notes-1.0.1.md
public/: index.html  manifest.json
refactor/: .gitignore  .prettierrc  README.md  craco.config.js  package-lock.json  package.json
refactor/public/: index.html  manifes.json
refactor/src/: _global.scss  index.tsx
refactor/src/chromeServices/: background.ts  content.ts
src/: _global.scss  index.css  index.jsx  index.tsx  main.tsx  manifest.json  options.scss  service-worker.js  themes.json
src/assets/: themes.json
src/chromeServices/: background.ts  content.ts
src/entrypoints/: background.ts  content.ts  inject.ts
src/hooks/: useExtensionOptions.tsx  useStorage.tsx  useToast.tsx
src/jirakpy/: __init__.py  cli.py  config_manager.py  jira_requests.py  layout.py  types.py  utils.py
src/jirapy/: __init__.py  cli.py
src/jkpy/: __init__.py  buildMetricsHandler.py  buildRequestHandler.py  cli.py  configHandler.py  config_manager.py  httpRequestHandler.py  jiraHandler.py  jiraRequest.py  jira_requests.py  resultsHandler.py  types.py  utils.py
src/js/: content-script.js  ext-settings.js  json-viewer.js  service-worker.js  session-storage-script.js
src/options/: options.css  options.html  options.js
src/popup/: jsonViewer.css  popup.css  popup.html  popup.js
src/providers/: StorageDataProvider.tsx  dataProvider.tsx  useAutosizeTextArea.ts  useStorageData.tsx  useTheme.tsx
src/types/: editor.ts  global.d.ts  hooks.d.ts  types.ts
src/utils/: Chrome-Utils.ts  ChromeUtils.ts  CustomEvents.ts  Json-Utils.ts  JsonUtils.ts  Utils.tsx  constants.ts  helperUtils.ts  json-viewer.js  messaging.ts  storage.ts  theme.ts  utils.ts  windowMessaging.ts
src/views/: options.tsx  popup.tsx  test.tsx
tests/: ext-settings.test.js
tooling/: prepare.sh  zip.sh
x/session-storage-hub/: index.html  manifest.json  package-lock.json  package.json  vite.config.ts
(+118 files in other folders)
