[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jirakpy"
dynamic = ["version"]
dependencies = [
    "typer>=0.9.0",
    "questionary",
    "cryptography",
    "requests",
    "pandas",
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[project.scripts]
jirakpy = "jirakpy.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "jirakpy.__version__"}