[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jkpy"
dynamic = ["version"]
dependencies = [
    "typer>=0.9.0",
    "requests",
    "pandas",
    "openpyxl",
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = []

[project.scripts]
jkpy = "jkpy.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "jkpy.__version__"}