[metadata]
name = jirapy
version = 0.1.0

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.8
install_requires = 
    typer>=0.9.0

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest>=7.0.0

[options.entry_points]
console_scripts = 
    jirapy = jirapy.cli:app