[metadata]
name = jkpy
version = 0.1.0

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.8
install_requires = 
    typer>=0.9.0
    requests
    pandas
    openpyxl

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest>=7.0.0

[options.entry_points]
console_scripts = 
    jkpy = jkpy.cli:app